--- a/src/value-sorter/style.css
+++ b/src/value-sorter/style.css
@@ -1,3 +1,21 @@
+body {
+	--background-color: #F0F0F0;
+	--text-color: #0D1B2A;
+	--accent-color: #53687E;
+
+	font-family: Arial, Helvetica, sans-serif;
+	color: var(--text-color);
+	background-color: var(--background-color);
+
+	transition: background-color .25s;
+}
+
+body:has(#darkmode-toggle:checked) {
+	--background-color: #0D1B2A;
+	--text-color: #F0F0F0;
+	--accent-color: #00FFFF;
+}
+
 article,
 header,
 footer {
@@ -13,7 +31,7 @@ footer {
 }
 
 article {
-	border: 1px solid #DDD;
+	border: 1px solid var(--accent-color);
 	border-radius: 1em;
 	padding: 1em;
 	margin-top: 1em;
@@ -96,7 +114,7 @@ article {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	vertical-align: top;
 	padding: 1em;
-	border: 5px solid #53687E;
+	border: 5px solid var(--accent-color);
 	/* margin-bottom: .5em;
 	margin-right: .5em; */
 	width: 8cm;
@@ -140,10 +158,15 @@ article {
 
 	/* Force light mode on print */
 
+	body, body:has(#darkmode-toggle:checked) {
+		--background-color: #FFFFFF;
+		--text-color: #000000;
+		--accent-color: #000000;
+	}
+
 	article,
 	header,
 	footer {
-		color: black;
 		margin: 0;
 		font-size: 1.2em;
 		overflow: hidden;
@@ -158,7 +181,7 @@ article {
 		padding: 0;
 	}
 	.printable .value-card {
-		border: 1px solid #000;
+		border: 1px solid currentColor;
 		page-break-inside: avoid;
 		width: 7cm;
 		font-size: 1.5rem;
